[gd_scene load_steps=4 format=2]

[ext_resource path="res://Units/Paladin.gd" type="Script" id=1]
[ext_resource path="res://Units/Warrior.png" type="Texture" id=2]
[ext_resource path="res://HealthBar.png" type="Texture" id=3]

[node name="Paladin" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
offset = Vector2( 0, -10 )

[node name="HealthBar" type="TextureProgress" parent="."]
margin_left = -25.0
margin_top = -50.0
margin_right = 25.0
margin_bottom = -40.0
max_value = 10.0
value = 10.0
texture_progress = ExtResource( 3 )

[node name="AttackSpeed" type="Timer" parent="."]

[node name="Label" type="Label" parent="."]
margin_left = -23.4403
margin_top = 0.263374
margin_right = 22.5597
margin_bottom = 14.2634
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
custom_constants/shadow_as_outline = 10
text = "Paladin"

[node name="HealSpeed" type="Timer" parent="."]
wait_time = 5.0
autostart = true
[connection signal="timeout" from="AttackSpeed" to="." method="_on_AttackSpeed_timeout"]
[connection signal="timeout" from="HealSpeed" to="." method="_on_HealSpeed_timeout"]
